<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hello_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/allerta_stencil"
            android:padding="10dp"
            android:text="@string/hello_text"
            android:textAlignment="center"
            android:textSize="30sp" />



        <ScrollView
            android:id="@+id/input_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_title"
                    style="@style/title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_title" />

                <EditText
                    android:id="@+id/name_edit"
                    style="@style/title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:gravity="start"
                    android:hint="@string/enter_name"
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nickname_title"
                    style="@style/title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname_title" />

                <EditText
                    android:id="@+id/nickname_edit"
                    style="@style/title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_nickname"
                    android:inputType="textPersonName"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/age_title"
                    style="@style/title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age_title" />

                <EditText
                    android:id="@+id/age_edit"
                    style="@style/title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_age"
                    android:inputType="textPersonName"/>

                <TextView
                    android:id="@+id/birthday_title"
                    style="@style/title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday_title" />

                <EditText
                    android:id="@+id/birthday_edit"
                    style="@style/title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_birthday"
                    android:inputType="textPersonName"/>

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</layout>